compiler/testData/diagnostics/testsWithStdLib/regression/kt37727.fir.kt
data class A(val x: <!UNRESOLVED_REFERENCE!>Set<CLassNotFound><!> = setOf()) {
    fun with(x: <!UNRESOLVED_REFERENCE!>Set<CLassNotFound>?<!> = null) {
        A(x ?: this.x)
    }
}
